# Project-OneX-IMEC

./: .gitignore  LICENSE  README.md  RUN_GUIDE.md  Version Log.docx
IMECvS3/data/models/: model_metadata.json
IMECvS3/data/processed/: imsa_processed_history.parquet
IMECvS3/scripts/: predict.py  preprocess.py  train.py
IMSA Data/2021/02-daytona-international-speedway/: 202101301540-race-results.csv
IMSA Data/2025/16-road-america/: 202508011400-practice-1-laps.csv  202508011400-practice-1-results.csv  202508011400-practice-1-weather.csv  202508020905-practice-2-laps.csv  202508020905-practice-2-results.csv  202508020905-practice-2-weather.csv  202508021640-qualifying-laps.csv  202508021640-qualifying-results.csv  202508021640-qualifying-weather.csv  202508031310-race-laps.csv  202508031310-race-results.csv  202508031310-race-weather.csv
IMSA Data/2026/: 03_Results_Practice 1.csv  03_Results_Practice 1.json  03_Results_Practice 2.csv  03_Results_Practice 2.json  03_Results_Practice 3.json  03_Results_Qualifying.csv  03_Results_Qualifying.json  03_Results_Race_Provisional.json  03_Results_Race_Unofficial.csv  03_Results_Race_Unofficial.json  26_Weather_Practice 1.csv  26_Weather_Practice 1.json  26_Weather_Practice 2.csv  26_Weather_Practice 2.json  26_Weather_Practice 3.csv  26_Weather_Practice 3.json  26_Weather_Qualifying.csv  26_Weather_Qualifying.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
(+52 files in other folders)
