[tool.poetry]
name = "imecvs3"
version = "1.2.0"
description = "IMEC-S3 v1.2: AI Race Strategy Analyst for IMSA"
authors = ["Shounak Shelke"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
lightgbm = "^4.3.0"
torch = "^2.2.0"
optuna = "^3.5.0"
shap = "^0.44.0"
joblib = "^1.3.0"
pyarrow = "^15.0.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
